--- a/css/styles.css
+++ b/css/styles.css
@@ -339,11 +339,11 @@ a:visited {
  background-image: url("https://learn-verified.s3.amazonaws.com/mathieu-balez.jpeg");
 }
 
-#diane-vu-cover {
+#betsy-yang-cover {
  background-image: url("https://learn-verified.s3.amazonaws.com/diane-vu-cover.jpg");
 }
 
-#diane-vu-card {
+#betsy-yang-card {
  background-image: url("https://learn-verified.s3.amazonaws.com/diane-vu.jpg");
 }
 
