--- a/css/styles.css
+++ b/css/styles.css
@@ -323,12 +323,12 @@ a:visited {
  * STUDENT IMAGE STYLES
  */
 
-#joe-burgess-card {
- background-image: url("https://learn-verified.s3.amazonaws.com/joe-burgess.jpeg");
+#taysa-mohler-card {
+ background-image: url("https://i.imgur.com/ZbG3qCY.jpg");
 }
 
-#joe-burgess-cover {
- background-image: url("https://learn-verified.s3.amazonaws.com/joe-burgess-cover.png");
+#taysa-mohler-cover {
+ background-image: url("https://imgur.com/VnLsa6g.jpg");
 }
 
 #mathieu-balez-cover {
