--- a/css/styles.css
+++ b/css/styles.css
@@ -323,12 +323,12 @@ a:visited {
  * STUDENT IMAGE STYLES
  */
 
-#joe-burgess-card {
- background-image: url("https://learn-verified.s3.amazonaws.com/joe-burgess.jpeg");
+#aurelio-ayala-cover {
+ background-image: url("https://imgur.com/a/flxJN2Q.jpg");
 }
 
-#joe-burgess-cover {
- background-image: url("https://learn-verified.s3.amazonaws.com/joe-burgess-cover.png");
+#aurelio-ayala-card {
+ background-image: url("https://imgur.com/a/C30RQNa.jpg");
 }
 
 #mathieu-balez-cover {
