--- a/css/styles.css
+++ b/css/styles.css
@@ -226,7 +226,7 @@ a:visited {
 }
 
 .profile-photo {
- background-image: url("https://learn-verified.s3.amazonaws.com/profile-photo-placeholder.png");
+ background-image: url("https://i.imgur.com/wwwgTOC.jpg");
   background-position: center;
   background-size: cover;
   background-repeat: no-repeat;
@@ -324,11 +324,11 @@ a:visited {
  */
 
 #aurelio-ayala-cover {
- background-image: url("https://imgur.com/a/flxJN2Q.jpg");
+ background-image: url("https://i.imgur.com/aROjSrH.jpg");
 }
 
 #aurelio-ayala-card {
- background-image: url("https://imgur.com/a/C30RQNa.jpg");
+ background-image: url("https://i.imgur.com/wwwgTOC.jpg");
 }
 
 #mathieu-balez-cover {
