--- a/css/styles.css
+++ b/css/styles.css
@@ -226,7 +226,7 @@ a:visited {
 }
 
 .profile-photo {
- background-image: url("https://learn-verified.s3.amazonaws.com/profile-photo-placeholder.png");
+ background-image: url("https://i.imgur.com/wwwgTOC.jpg");
   background-position: center;
   background-size: cover;
   background-repeat: no-repeat;
@@ -323,12 +323,12 @@ a:visited {
  * STUDENT IMAGE STYLES
  */
 
-#joe-burgess-card {
- background-image: url("https://learn-verified.s3.amazonaws.com/joe-burgess.jpeg");
+#aurelio-ayala-cover {
+ background-image: url("https://i.imgur.com/aROjSrH.jpg");
 }
 
-#joe-burgess-cover {
- background-image: url("https://learn-verified.s3.amazonaws.com/joe-burgess-cover.png");
+#aurelio-ayala-card {
+ background-image: url("https://i.imgur.com/wwwgTOC.jpg");
 }
 
 #mathieu-balez-cover {
